# protosaurus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pip.yml  wheels.yml
include/protosaurus/: protosaurus.h
include/protosaurus/detail/: json.h
include/protosaurus/internal/: json.h
src/: protosaurus_ext.cpp
src/protosaurus/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_exceptions.py  test_message_indices.py  test_parsing.py
