[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "protosaurus"
version = "0.1.0"
description = "Protocol Buffers at runtime"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Thomas Oberbichler", email = "thomas.oberbichler@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
]

[project.urls]
Homepage = "https://github.com/oberbichler/protosaurus"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

