[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "protosaurus"
version = "0.3.2"
description = "Protocol Buffers at runtime"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Thomas Oberbichler", email = "thomas.oberbichler@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: ISC License (ISCL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["click >= 8.1", "requests >= 2.31"]

[project.optional-dependencies]
test = ["pytest >=6.0", "deepdiff"]

[project.scripts]
protosaurus = "protosaurus.cli:main"

[project.urls]
Homepage = "https://github.com/oberbichler/protosaurus"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1
test-command = "pytest {project}/tests"
test-requires = ["pytest", "deepdiff"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
